--- a/azure-ci.yaml
+++ b/azure-ci.yaml
@@ -8,7 +8,7 @@ steps:
 - task: Docker@2
   inputs:
     containerRegistry: 'kirankvathan'
-    repository: '$(netapp)/$(netapp)'
+    repository: '$(kirankvathan)/$(netapp)'
     command: 'buildAndPush'
     Dockerfile: '**/Dockerfile'
 - task: PublishBuildArtifacts@1
